# fundsp

./: Cargo.toml
benches/: benchmark.rs
examples/: beep.rs  file.rs  grain.rs  grain2.rs  keys.rs  live_adsr.rs  network.rs  optimize.rs  peek.rs  plot.rs  sequence.rs  type.rs
examples/input/src/: main.rs
src/: audionode.rs  audiounit.rs  biquad.rs  biquad_bank.rs  buffer.rs  combinator.rs  convolve.rs  delay.rs  dynamics.rs  envelope.rs  feedback.rs  fft.rs  filter.rs  fir.rs  follow.rs  generate.rs  granular.rs  graph.rs  lib.rs  math.rs  moog.rs  net.rs  noise.rs  oscillator.rs  oversample.rs  params.rs  peak_builder.rs  prelude.rs  prelude32.rs  prelude64.rs  read.rs  realnet.rs  realseq.rs  resample.rs  resynth.rs  reverb.rs  rez.rs  sequencer.rs  setting.rs  shape.rs  (+8 more)
tests/: test_basic.rs  test_dynamics.rs  test_flow.rs  test_follow.rs
